fix: Planes_add:Schema
